<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/addPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="#FFFFFFFF"
            android:contentDescription="@string/addPhoto"
            android:maxHeight="@dimen/activity_post_image_button_max_view_height"
            android:maxWidth="@dimen/activity_post_image_button_max_view_height"
            android:scaleType="fitCenter"
            android:src="@drawable/add_photo_button" />

        <EditText
            android:id="@+id/postEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="@integer/postLines" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

    	<CheckBox
    	    android:id="@+id/twitterCheckBox"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/twitter" />

    	<!--<CheckBox-->
    	    <!--android:id="@+id/faceBookCheckBox"-->
    	    <!--android:layout_width="wrap_content"-->
    	    <!--android:layout_height="wrap_content"-->
    	    <!--android:text="@string/facebook" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/postButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post" />
    </LinearLayout>
</LinearLayout>